# artemis

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  package.yaml  toit-log.patch
tests/: CMakeLists.txt  artemis-server-test.toit  artemis-server.toit  artemis_server.toit  artemis_server_supabase_local_test.toit  artemis_server_test.toit  artemis_server_test_base.toit  artemis_server_toit_http_test.toit  backup-server-test.toit  binary-diff-test.toit  binary_diff_test.toit  broker-test.toit  broker.toit  broker_mosquitto_test.toit  broker_supabase_local_test.toit  broker_test.toit  broker_test_base.toit  broker_toit_http_test.toit  broker_toit_mqtt_test.toit  brokers.toit  cache-test.toit  cache_test.toit  channel-test.toit  channel_test.toit  check-in-test.toit  check_in2_test.toit  check_in_shared.toit  check_in_test.toit  cli-device-extract.toit  cli.toit  cmd-auth-test.toit  cmd-config-test.toit  cmd-device-container-test.toit  cmd-device-container2-test-slow.toit  cmd-device-default-test.toit  cmd-device-extract-test.toit  cmd-device-show-test.toit  cmd-fleet-add-device-test.toit  cmd-fleet-add-devices-test.toit  cmd-fleet-create-identities-test.toit  (+117 more)
tests/base-image/: base.yaml
tests/base-qemu/: eth.toit
tests/base-tar/: base.yaml
tests/gold/cmd-config-test/: BAA-config-show.txt  BAC-init-recovery.txt  BBA-config-show-default-values-set.txt  DAA-config-broker-default-non-existing.txt  DAB-config-broker-default-non-existing-no-servers.txt
tests/gold/cmd-device-container-test/: 200_install.txt  230_uninstall_non_existing.txt
tests/gold/cmd-device-default-test/: 20-set-default.txt  30-default-is-set.txt
tests/gold/cmd-device-show-test/: 110-device-show.txt  111-device-show.txt
tests/gold/cmd-fleet-create-reference-test/: 110-list-groups.txt  120-list-pods.txt  200-create-ref.txt  210-list-pods-ref.txt  220-list-groups-ref.txt  300-full-fleet-as-ref.txt  310-ref-as-fleet.txt
tests/gold/cmd-fleet-group-test/: 110-list-groups.txt  120-add-group-no-force.txt  121-add-group.txt  122-add-group-with-pod.txt  123-add-group-from-group.txt  124-add-group-already-exists.txt  130-remove-group.txt  140-update-group.txt  141-update-group-name.txt  142-update-group-name-and-pod.txt  143-update-default-group-name.txt  145-update-group-name-doesnt-exist.txt  147-update-tags.txt  148-rename-multi.txt  151-remove-group-with-devices.txt  153-move-groups.txt  154-remove-group.txt  155-remove-group.txt  156-remove-default-group.txt  170-move-to-non-existing-group.txt  180-no-add-device.txt  180-no-add-existing-device.txt  181-no-add-existing-device-default.txt  182-no-create-identity.txt  183-no-create-identity-default.txt
tests/gold/cmd-fleet-migration-test-slow/: 010-before-roll-out.txt
tests/gold/cmd-fleet-recovery-test/: 010-show.txt  020-add.txt  020_add.txt  040-show.txt  040_show.txt  050-export.txt
tests/gold/cmd-fleet-status-test/: 00_never_seen.txt  10_never_seen_empty.txt  20_device0_is_online.txt  30_all_devices_are_online.txt  40_device0_checked_in.txt  50_unhealthy.txt
tests/gold/cmd-org-test/: 010-list.txt  110-create.txt  120-after-create.txt  200-org-show.txt  210-org-rename.txt  220-org-show-renamed.txt  310-default-org.txt  315-default-org-id-only.txt  330-create-no-default.txt  340-set-default.txt  400-org-members-list.txt  410-org-members-add.txt  420-org-members-after-add.txt  425-add-self-again.txt  430-org-members-list-id-only.txt  440-org-set-role.txt  450-org-members-after-set-role.txt  460-remove-member.txt  470-remove-self.txt  480-remove-self-force.txt  490-org-members-after-remove.txt
tests/gold/cmd-pod-delete-test/: CAA-delete-pod-tag.txt  CCA-delete-pod-id.txt  DAA-delete-pods-by-name.txt  EBA-delete-non-existing.txt  EBD-delete-non-existing-many.txt  ECA-delete-non-existing-description.txt  ECC-delete-non-existing-description-many.txt
tests/gold/cmd-pod-print-spec-test/: AAA-print-spec.txt  BAA-print-spec-flat.txt  CAA-print-spec.txt  DAA-print-spec-flat.txt
tests/gold/cmd-pod-print-test/: AAA-print-spec.txt  BAA-print-spec-flat.txt  CAA-print-spec.txt  DAA-print-spec-flat.txt
tests/gold/cmd-pod-tag-test/: AAA-add-tag.txt  AAB-add-tags.txt  ABA-add-tags-fail.txt  ABB-add-tags-fail.txt  ACA-add-tags-force.txt  DAA-remove-tags.txt  DAB-remove-tags.txt  DAC-remove-multiple-tags.txt  DAD-remove-latest.txt
tests/gold/cmd-pod-tag-test-slow/: BAA-upload-existing-tag.txt  BAC-upload-existing-tag-force.txt
tests/gold/cmd-pod-upload-tag-test-slow/: BAA-upload-existing-tag.txt  BAC-upload-existing-tag-force.txt  CAA-upload-to-different-fleet.txt
tests/gold/cmd_config_test/: BAA-config-print.txt  BAA-config-show.txt  BBA-config-print-default-values-set.txt
tests/gold/cmd_device_container_test/: 200_install.txt  220_uninstall.txt  230_uninstall_non_existing.txt  (+3 more)
tests/qemu-base/: base.json  base.yaml
tests/spec_extends_tests/: CMakeLists.txt  basic_expected.json  basic_test.yaml  cyclic_fail.gold  cyclic_nested_1.json  cyclic_nested_1.yaml  cyclic_nested_2.json  cyclic_nested_2.yaml  cyclic_nested_3.json  cyclic_nested_fail.gold  cyclic_nested_test.yaml  cyclic_test.json  cyclic_test.yaml  delete_1_0.json  delete_1_0.yaml  delete_1_1.yaml  delete_1_2.json  delete_1_2.yaml  delete_2_0.json  delete_2_0.yaml  delete_expected.json  delete_test.json  delete_test.yaml  error_1.json  error_1.yaml  error_2.json  error_2.yaml  error_fail.gold  error_test.json  error_test.yaml  full_include_1.yaml  full_include_expected.json  full_include_test.json  full_include_test.yaml  nested_1_0.json  nested_1_0.yaml  nested_1_1.yaml  nested_1_2.yaml  nested_1_3.json  nested_1_3.yaml  (+11 more)
tests/spec_include_tests/: basic_test.json  cyclic_fail.gold  cyclic_nested_1.json  cyclic_nested_2.json  cyclic_nested_3.json  cyclic_nested_fail.gold  cyclic_test.json  delete_1_0.json  delete_1_1.json  delete_test.json  error_1.json  error_2.json  error_fail.gold  error_test.json  full_include_test.json  nested_1_0.json  nested_1_2.json  nested_2_0.json  nested_2_1.json  nested_expected.json  nested_test.json  run.toit
(+466 files in other folders)
